Testing 'login' validation
FB said to do it, might roll this back if unnecessary

--- a/views/index.erb
+++ b/views/index.erb
@@ -102,7 +102,28 @@
           cookie     : true,                                    // enable cookies to allow the server to access the session
           xfbml      : true                                     // parse XFBML
         });
+		
+		function onLogin(response) {
+		  if (response.status == 'connected') {
+			FB.api('/me?fields=first_name', function(data) {
+			  var welcomeBlock = document.getElementById('fb-welcome');
+			  welcomeBlock.innerHTML = 'Hello, ' + data.first_name + '!';
+			});
+		  }
+		}
 
+		FB.getLoginStatus(function(response) {
+		  // Check login status on load, and if the user is
+		  // already logged in, go directly to the welcome message.
+		  if (response.status == 'connected') {
+			onLogin(response);
+		  } else {
+			// Otherwise, show Login dialog first.
+			FB.login(function(response) {
+			  onLogin(response);
+			}, {scope: 'user_friends, email'});
+		  }
+		});
         // Listen to the auth.login which will be called when the user logs in
         // using the Login button
         FB.Event.subscribe('auth.login', function(response) {
