--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:fb="http://ogp.me/ns/fb#" lang="en">
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
@@ -28,8 +29,15 @@
     <script type="text/javascript" src="/javascripts/jquery-1.7.1.min.js"></script>
 
     <script type="text/javascript">
+
+
+
+
+
+
       function logResponse(response) {
         if (console && console.log) {
+
           console.log('The response was', response);
         }
       }
@@ -98,21 +106,37 @@
         FB.init({
           appId      : "<%= @app['id'] %>",                     // App ID
           channelUrl : "<%= url_no_scheme('/channel.html') %>", // Channel File
-          status     : true,                                    // check login status
+          //status     : true,                                    // check login status
           cookie     : true,                                    // enable cookies to allow the server to access the session
           xfbml      : true                                     // parse XFBML
+          version    : 'v2.2' // use version 2.2
         });
+		// Now that we've initialized the JavaScript SDK, we call 
+		// FB.getLoginStatus().  This function gets the state of the
+		// person visiting this page and can return one of three states to
+		// the callback you provide.  They can be:
+		//
+		// 1. Logged into your app ('connected')
+		// 2. Logged into Facebook, but not your app ('not_authorized')
+		// 3. Not logged into Facebook and can't tell if they are logged into
+		//    your app or not.
+		//
+		// These three cases are handled in the callback function.
 
+		FB.getLoginStatus(function(response) {
+		statusChangeCallback(response);
+		});
+		
         // Listen to the auth.login which will be called when the user logs in
         // using the Login button
-        FB.Event.subscribe('auth.login', function(response) {
+        //FB.Event.subscribe('auth.login', function(response) {
           // We want to reload the page now so Ruby can read the cookie that the
           // Javascript SDK sat. But we don't want to use
           // window.location.reload() because if this is in a canvas there was a
           // post made to this page and a reload will trigger a message to the
           // user asking if they want to send data again.
           window.location = window.location;
-        });
+        //});
 
         FB.Canvas.setAutoGrow();
       };
@@ -120,9 +144,23 @@
       // Load the SDK Asynchronously
       (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js";
+        js.src = "//connect.facebook.net/en_US/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
@@ -162,10 +200,29 @@
           <h1>Welcome</h1>
           <div class="fb-login-button" data-scope="<%= FACEBOOK_SCOPE %>">Log In</div>
 
+
+
+
         </div>
+
+
+
+
+
+
+
+
 
       <% end %>
     </header>
+
+
+
+
+
+
+
+
 
     <section id="get-started">
       <p>Welcome to your Facebook app, running on <span>heroku</span>!</p>
@@ -173,9 +230,24 @@
     </section>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <% if @user %>
     <section id="samples" class="clearfix">
           <h1>Examples of the Facebook Graph API</h1>
+
 
           <div class="list">
             <h3>A few of your friends</h3>
@@ -191,6 +263,14 @@
             </ul>
           </div>
 
+
+
+
+
+
+
+
+
           <div class="list inline">
             <h3>Recent photos</h3>
             <ul class="photos">
@@ -203,6 +283,17 @@
               <% end %>
             </ul>
           </div>
+
+
+
+
+
+
+
+
+
+
+
 
           <div class="list">
             <h3>Things you like</h3>
@@ -217,6 +308,11 @@
               <% end %>
             </ul>
           </div>
+
+
+
+
+
 
           <div class="list">
             <h3>Friends using this app</h3>
@@ -233,6 +329,10 @@
           </div>
         </section>
     <% end %>
+
+
+
+
 
 
     <section id="guides" class="clearfix">
